# musictype

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: main.py  scraping.py  settings.py  song_utils.py  sqlmodel_fix.py
backend/api/: dependencies.py  exceptions.py  models.py
backend/api/routes/: base_router.py  resources.py
frontend/: .env.development  .eslintrc.js  package.json  tsconfig.json
frontend/api/: client.ts  models.ts
frontend/components/: LetterHeight.tsx  LetterSize.tsx  LoadingSpinner.tsx  SongSelect.tsx  TypingTest.tsx
frontend/components/TypingTest/: Letter.tsx  Lyrics.tsx  TypingTest.tsx
frontend/contexts/: SongProvider.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/song/: [songId].tsx
frontend/styles/: globals.css
tests/: conftest.py  test_routes_api.py  test_routes_resources.py  test_song_utils.py
