[tool.black]
line_length = 79
target_version = ["py39"]

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.report]
fail_under = 75
skip_covered = false
show_missing = true
omit = ["backend/react_utils.py"]
exclude_lines = [
	"pragma: no cover",
	"if __name__ == \"__main__\":",
	"raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = ["tests/"]
addopts = "-vv --cov backend --cov-report term --cov-report html"
log_cli = true
env = ["APP_ENV=dev", "DB_URI=sqlite:///tests/fixtures/tests_database.db"]

[tool.poetry]
name = "musictype"
version = "0.1.0"
description = ""
authors = ["Angel"]

packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.3"
sqlmodel = "^0.0.8"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
python-dotenv = "^0.19.2"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
pytest = "^6.2.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
ipykernel = "^6.7.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
